api gateway, handlers, new containers and fix of code
